@@ -76,6 +76,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Div                    Gabriel Lorenzo
 - DOS                    Alessandro Staltari
 - Eiffel                 Zoran Simic
+- eMail \ mbox           Benny Baumann
 - FreeBasic              Roberto Rossi
 - Fortran                Cedric Arrabie
 - glSlang                Benny Baumann
